docs/spec/grammar/conformance/accept/02-fn-and-let.myc
// exercises: fn declaration, let-in binding, call, path
colony signals

fn flip(x: Binary{8}) -> Binary{8} =
    let y = not(x) in y
