docs/spec/grammar/conformance/reject/05-reserved-word-ident.myc
// rejected: 'colony' is a reserved word and cannot be used as an identifier
colony bad

fn colony(x: Binary{8}) -> Binary{8} = x
